# Stock-Exchange

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: Broker.cpp  Broker.hpp  CMakeLists.txt  StockExchange.cpp  StockExchange.h  StockExchange.hpp  main.cpp  shortcuts.h  shortcuts.hpp
src/internals/: InternalOrder.hpp  OrderBook.cpp  OrderBook.h  OrderBook.hpp  Position.cpp  Position.h  Position.hpp  RegisteredUser.cpp  RegisteredUser.h  RegisteredUser.hpp  Transaction.cpp  Transaction.h  Transaction.hpp
